Fix #3278: use padding, so containing block covers the current block

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -761,7 +761,7 @@ div.orbeon.orbeon-portlet-div {
             // Space for trigger showing the file upload
             &>.fb-upload {
                 display: block;
-                margin-bottom: 32px;
+                padding-bottom: 32px;
             }
             // Inputs for editing the label and hint to take the whole width of the grid content
             .xforms-label input, .xforms-hint input {
